--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfólio</title>
-  <link rel="stylesheet" href="/page/style.css" />
+  <title>Emilly de Albuquerque</title>
+  <link rel="stylesheet" href="/front-end/style.css" />
 </head>
 
 <body>
