--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emilly de Albuquerque</title>
-  <link rel="stylesheet" href="./front-end/estilo.css" />
+  <link rel="stylesheet" href="./css/estilo.css" />
   <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Lobster&family=Playfair+Display:ital@1&display=swap"
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/c28bd62d8a.js" crossorigin="anonymous"></script>
@@ -17,9 +17,11 @@
 
       <ul>
 
-        <li><a href="./front-end/sobre.html">Sobre</a></li>
+        <li><a href="#sobre">Sobre</a></li>
         <li><a href="#portfolio">Portfólio</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <!-- <li><a href="#cc">Linguagens e Tecnologias</a></li> -->
+        <li><a
+          href="#contato">Contato</a></li>
 
       </ul>
 
@@ -31,7 +33,7 @@
 
     </div>
   </header>
-  <section class="portfolio" id="portfolio">
+  <section id="portfolio">
 
     <h2>Portfólio</h2>
 
@@ -43,7 +45,59 @@
     </div>
   </section>
 
-  <section class="contato" id="contato">
+  <section id="sobre">
+    <h2>Oi, sou Emilly</h2>
+
+    <figure class="avatar">
+      <img src="https://avatars2.githubusercontent.com/u/47047853?s=400&u=1103402da437d2da352ffa8251383de64fed6fec&v=4"
+        alt="Emilly de Albuquerque">
+    </figure>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit commodi nisi rerum tempore sunt placeat debitis!
+      Similique quae, incidunt impedit esse, itaque eius est ipsa, voluptatum qui laudantium error sint!</p>
+    <p> veritatis sit ad veniam, earum, possimus suscipit sint mollitia voluptatem quasi corporis accusantium nisi sunt
+      ipsa perspiciatis at velit quidem delectus odio adipisci deleniti id? Mollitia beatae officiis illo.</p>
+    <p>, voluptatem debitis recusandae tenetur, dolor, cupiditate libero quidem velit tempore architecto rem officiis
+      perspiciatis at laboriosam amet quo veritatis similique unde nobis esse facere harum hic! Rem, cupiditate dolore?
+    </p>
+    <p>
+      Este site foi construído durante a <a href="https://www.alura.com.br/imersao-css">Imersão CSS da Alura</a>
+    </p>
+  </section>
+
+  <section id="cc">
+    
+    <h2>Linguagens e Tecnologias</h2>
+
+    <div class="imagem">
+
+      <figure>
+        <img class="img-portfolio" src="./img/java-creditos-g1.jpg" alt="Java">
+        <figcaption>Java</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/python-creditos-olhar-digital.jpg" alt="Python">
+        <figcaption>Python</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/html5-creditos-codigo-fonte.jpeg" alt="Html">
+        <figcaption>HTML</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/css3-creditos-andrehost.jpeg" alt="Css">
+        <figcaption>CSS</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/javascript-creditos-wikipedia.png" alt="Javascript">
+        <figcaption>Javascript</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/R-creditos-wikipedia.png" alt="R">
+        <figcaption>R</figcaption>
+      </figure>
+    </div>
+  </section>
+
+  <section id="contato">
     <h2>Onde me encontrar</h2>
     <div class="grid icons">
       <a target="_blank" href="https://github.com/emys-alb">
