concertando bug e adicionando atalho pro topo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,  height=device-height, initial-scale=1.0">
   <title>Emilly de Albuquerque</title>
   <link rel="stylesheet" href="./css/estilo.css" />
   <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Lobster&family=Playfair+Display:ital@1&display=swap"
@@ -12,21 +12,28 @@
 </head>
 
 <body>
-  <header>
-    <nav class="menu">
+  <header id="topo">
+    <div class="menu">
 
       <ul>
 
+        <li><a href="#topo">
+          <i class="fas fa-home"></i>
+        </a>
         <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#portfolio">Portfólio</a></li>
-        <!-- <li><a href="#cc">Linguagens e Tecnologias</a></li> -->
-        <li><a
-          href="#contato">Contato</a></li>
+        <li><a href="#portfolio">Portfólio</a>
+
+          <ul>
+            <li><a href="#cc">Linguagens e Tecnologias</a></li>
+          </ul>
+
+        </li>
+        <li><a href="#contato">Contato</a></li>
 
       </ul>
 
-    </nav>
-    <div>
+    </div>
+    <div class="titulo">
 
       <h1 class="title">Emilly de Albuquerque Oliveira</h1>
       <h2 class="subtitle">Graduanda em Ciência da Computação</h2>
@@ -65,7 +72,7 @@
   </section>
 
   <section id="cc">
-    
+
     <h2>Linguagens e Tecnologias</h2>
 
     <div class="imagem">
@@ -114,7 +121,6 @@
       </a>
     </div>
 
-  </section>
 </body>
 
 </html>
