--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#portfolio">Portfólio</a>
 
-          <ul>
+          <ul class="newBack">
             <li><a href="#cc">Linguagens e Tecnologias</a></li>
           </ul>
 
