--- a/index.html
+++ b/index.html
@@ -55,12 +55,9 @@
       <img src="https://avatars2.githubusercontent.com/u/47047853?s=400&u=1103402da437d2da352ffa8251383de64fed6fec&v=4"
         alt="Emilly de Albuquerque">
     </figure>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit commodi nisi rerum tempore sunt placeat debitis!
-      Similique quae, incidunt impedit esse, itaque eius est ipsa, voluptatum qui laudantium error sint!</p>
-    <p> veritatis sit ad veniam, earum, possimus suscipit sint mollitia voluptatem quasi corporis accusantium nisi sunt
-      ipsa perspiciatis at velit quidem delectus odio adipisci deleniti id? Mollitia beatae officiis illo.</p>
-    <p>, voluptatem debitis recusandae tenetur, dolor, cupiditate libero quidem velit tempore architecto rem officiis
-      perspiciatis at laboriosam amet quo veritatis similique unde nobis esse facere harum hic! Rem, cupiditate dolore?
+    <p>Meu nome é Emilly de Albuquerque Oliveira, moro em Campina Grande-PB e estudo Ciência da Computação na Universidade Federal de Campina Grande(UFCG). </p>
+    <p> Eu sou movida 30% por música e o restante é em lutar em causas sociais. Desigualdade social e mal tratos aos animais são os dois assuntos que me fizeram entrar em Computação. Porque eu acredito que posso ajudar e mudar esse cenário mesmo que seja aos poucos, e sendo Computação uma área tão abrangente e interligada às demais, ganhou meu interesse muito cedo.</p>
+    <p>Eu tenho interesse na área de Computação desde 2012, quando eu descobri o curso, mas só comecei os estudos após minha ingressão no curso em 2019.1. Desde então procurei vivenciar tudo no curso, participei brevemente de olimpíadas, fiz parte do Centro Acadêmico de Computação(CAESI), e fui voluntária em eventos do PET Computação.
     </p>
     <p>
       Este site foi construído durante a <a href="https://www.alura.com.br/imersao-css">Imersão CSS da Alura</a>
