Ajustando alinhamento da seção #cc

--- a/index.html
+++ b/index.html
@@ -75,27 +75,22 @@
 
       <figure>
         <img class="img-portfolio" src="./img/java-creditos-g1.jpg" alt="Java">
-        <figcaption>Java</figcaption>
+        
       </figure>
       <figure>
-        <img class="img-portfolio" src="./img/python-creditos-olhar-digital.jpg" alt="Python">
-        <figcaption>Python</figcaption>
+        <img class="img-portfolio" src="./img/python-creditos-olhar-digital.jpg" alt="Logo da linguagem python">
       </figure>
       <figure>
         <img class="img-portfolio" src="./img/R-creditos-wikipedia.png" alt="R">
-        <figcaption>R</figcaption>
       </figure>
       <figure>
-        <img class="img-portfolio" src="./img/html5-creditos-codigo-fonte.jpeg" alt="Html">
-        <figcaption>HTML</figcaption>
+        <img class="img-portfolio" src="./img/html5-creditos-codigo-fonte.jpeg" alt="Logo da linguagem de marcação html">
       </figure>
       <figure>
-        <img class="img-portfolio" src="./img/css3-creditos-andrehost.jpeg" alt="Css">
-        <figcaption>CSS</figcaption>
+        <img class="img-portfolio" src="./img/css3-creditos-andrehost.jpeg" alt="Logo do css">
       </figure>
       <figure>
-        <img class="img-portfolio" src="./img/javascript-creditos-wikipedia.png" alt="Javascript">
-        <figcaption>Javascript</figcaption>
+        <img class="img-portfolio" src="./img/javascript-creditos-wikipedia.png" alt="Logo da linguagem javascript">
       </figure>
 
     </div>
