--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,  height=device-height, initial-scale=1.0">
   <title>Emilly de Albuquerque</title>
   <link rel="stylesheet" href="./css/estilo.css" />
+  <link rel="stylesheet" href="./css/projetos.css" />
   <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Lobster&family=Playfair+Display:ital@1&display=swap"
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/c28bd62d8a.js" crossorigin="anonymous"></script>
@@ -45,6 +46,47 @@
     <h2>Portfólio</h2>
 
     <div id="projetos">
+      <a target="_blank" href="https://github.com/emys-alb/ImersaoGameDev">
+        <div>
+          <h3>Imersão GameDev</h3>
+          <p>Jogo desenvolvido durante a Imersão GameDev da Alura, realizada entre os dias 22 a 26 de Junho. </p>
+        </div>
+      </a>
+
+      <a target="_blank" href="https://github.com/emys-alb/TDAH">
+        <div>
+          <h3>Tripulantes da Aventura Hiperespacial</h3>
+          <p>A aplicativo para aulixiar na organização de tarefas do dia e no monitoramento de crianças com TDAH.</p>
+        </div>
+      </a>
+
+      <a target="_blank" href="https://github.com/emys-alb/teste-trajetoria">
+        <div>
+          <h3>Teste Trajetória Parlamentar</h3>
+          <p>Repositório para a construção do gráfico da trajetória parlamentar usando a biblioteca d3.js.</p>
+        </div>
+      </a>
+
+      <a target="_blank" href="https://github.com/emys-alb/WorkshopDev">
+        <div>
+          <h3>WorkshopDev: Casa Criativa</h3>
+          <p>A Casa Criativa é uma aplicação que tem por objetivo apresentar idéias do que fazer durante o isolamento social</p>
+        </div>
+      </a>
+
+      <a target="_blank" href="https://github.com/emys-alb/ImersaoDados">
+        <div>
+          <h3>Imersão Dados</h3>
+          <p>Análise de dados do Enem 2019, tendo destaque em diferenças socioeconômicas e como afetam as notas dos participantes. </p>
+        </div>
+      </a>
+
+      <a target="_blank" href="https://github.com/emys-alb/QuizAlura">
+        <div>
+          <h3>Mãe de Planta Quiz</h3>
+          <p>Quiz sobre plantas criado durante a Imersão React v2 da Alura</p>
+        </div>
+      </a>
     </div>
   </section>
 
@@ -75,10 +117,9 @@
 
       <figure>
         <img class="img-portfolio" src="./img/java-creditos-g1.jpg" alt="Java">
-        
       </figure>
       <figure>
-        <img class="img-portfolio" src="./img/python-creditos-olhar-digital.jpg" alt="Logo da linguagem python">
+        <img class="img-portfolio" src="./img/python-creditos-sticker-king.jpg" alt="Logo da linguagem python">
       </figure>
       <figure>
         <img class="img-portfolio" src="./img/R-creditos-wikipedia.png" alt="R">
@@ -102,7 +143,7 @@
       <a target="_blank" href="https://github.com/emys-alb">
         <i class="fab fa-github"></i>
       </a>
-      <a target="_blank" href="https://linkedin.com/in/emilly-de-albuquerque-oliveira-59837118b">
+      <a target="_blank" href="https://www.linkedin.com/in/emilly-alb/">
         <i class="fab fa-linkedin"></i>
       </a>
       <a href="mailto:emilly.oliveira@ccc.ufcg.edu.br">
