--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <p>Meu nome é Emilly de Albuquerque Oliveira, moro em Campina Grande-PB e estudo Ciência da Computação na Universidade Federal de Campina Grande(UFCG). </p>
     <p> Eu sou movida 30% por música e o restante é em lutar em causas sociais. Desigualdade social e mal tratos aos animais são os dois assuntos que me fizeram entrar em Computação. Porque eu acredito que posso ajudar e mudar esse cenário mesmo que seja aos poucos, e sendo Computação uma área tão abrangente e interligada às demais, ganhou meu interesse muito cedo.</p>
     <p>Eu tenho interesse na área de Computação desde 2012, quando eu descobri o curso, mas só comecei os estudos após minha ingressão no curso em 2019.1. 
-      Desde então procurei vivenciar tudo no curso, fiz parte do Centro Acadêmico de Computação(CAESI), além de coordenadora de eventos
+      Desde então procurei vivenciar tudo no curso, fiz parte do Centro Acadêmico de Computação(CAESI), além de ter sido coordenadora de eventos
        no <a href="https://elas.computacao.ufcg.edu.br/">Elas@Computação</a>
-       e Core Team na <a href="https://opendevufcg.org/">OpenDevUFCG</a>.
+       e sou Core Team na <a href="https://opendevufcg.org/">OpenDevUFCG</a>.
     </p>
     <p>
       Este site foi construído durante a <a href="https://www.alura.com.br/imersao-css">Imersão CSS da Alura</a>
