--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="#portfolio">Portfólio</a>
 
           <ul class="newBack">
-            <li><a href="#cc">Linguagens e Tecnologias</a></li>
+            <li><a href="#tecs">Linguagens e Tecnologias</a></li>
           </ul>
 
         </li>
@@ -109,7 +109,7 @@
     </p>
   </section>
 
-  <section id="cc">
+  <section id="tecs">
 
     <h2>Linguagens e Tecnologias</h2>
 
