--- a/index.html
+++ b/index.html
@@ -51,12 +51,18 @@
           <h3>Imersão GameDev</h3>
           <p>Jogo desenvolvido durante a Imersão GameDev da Alura, realizada entre os dias 22 a 26 de Junho. </p>
         </div>
+        <div class="linguagem">
+          <p>Javascript, p5.js</p>
+        </div>
       </a>
 
       <a target="_blank" href="https://github.com/emys-alb/TDAH">
         <div>
           <h3>Tripulantes da Aventura Hiperespacial</h3>
           <p>A aplicativo para aulixiar na organização de tarefas do dia e no monitoramento de crianças com TDAH.</p>
+        </div>
+        <div class="linguagem">
+          <p>Javascript, React Native</p>
         </div>
       </a>
 
@@ -65,12 +71,18 @@
           <h3>Teste Trajetória Parlamentar</h3>
           <p>Repositório para a construção do gráfico da trajetória parlamentar usando a biblioteca d3.js.</p>
         </div>
+        <div class="linguagem">
+          <p>Javascript, D3.js</p>
+        </div>
       </a>
 
       <a target="_blank" href="https://github.com/emys-alb/WorkshopDev">
         <div>
           <h3>WorkshopDev: Casa Criativa</h3>
           <p>A Casa Criativa é uma aplicação que tem por objetivo apresentar idéias do que fazer durante o isolamento social</p>
+        </div>
+        <div class="linguagem">
+          <p>HTML, CSS, Javascript</p>
         </div>
       </a>
 
@@ -79,12 +91,38 @@
           <h3>Imersão Dados</h3>
           <p>Análise de dados do Enem 2019, tendo destaque em diferenças socioeconômicas e como afetam as notas dos participantes. </p>
         </div>
+        <div class="linguagem">
+          <p>Python, Pandas</p>
+        </div>
       </a>
 
       <a target="_blank" href="https://github.com/emys-alb/QuizAlura">
         <div>
           <h3>Mãe de Planta Quiz</h3>
           <p>Quiz sobre plantas criado durante a Imersão React v2 da Alura</p>
+        </div>
+        <div class="linguagem">
+          <p>Javascript, React</p>
+        </div>
+      </a>
+
+      <a target="_blank" href="https://github.com/emys-alb/PlantManager">
+        <div>
+          <h3>Plant Manager</h3>
+          <p>Uma aplicação para ajudar os cuidadores de plantas a não esquecerem de regá-las no tempo certo.</p>
+        </div>
+        <div class="linguagem">
+          <p>Typescript, React Native</p>
+        </div>
+      </a>
+
+      <a target="_blank" href="https://github.com/emys-alb/ConversorMoedas">
+        <div>
+          <h3>Conversor de Moedas</h3>
+          <p>Conversor de moedas por linha de comando.</p>
+        </div>
+        <div class="linguagem">
+          <p>Javascript, Puppeteer</p>
         </div>
       </a>
     </div>
